# enigma2-old

./: Navigation.py  README.md  configure.ac  enigma2.bb  mytest.py
data/: Makefile.am  menu.xml  unicable.xml
data/display480/: Makefile.am
data/fonts/: Makefile.am
lib/dvb/: dvb.cpp  dvb.h  frontend.cpp  idvb.h
lib/python/: enigma_python.i
lib/python/Components/: AVSwitch.py  About.py  Harddisk.py  InputDevice.py  Network.py  NimManager.py  Scanner.py
lib/python/Plugins/Extensions/Infopanel/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/SoftwareManager/: plugin.py
lib/python/Screens/: Ci.py  InfoBar.py  InputDeviceSetup.py  Rc.py  Satconfig.py  ScanSetup.py  Standby.py  UserInterfacePositioner.py
lib/python/Tools/: HardwareInfo.py  Profile.py  StbHardware.py
