installdir = $(pkglibdir)/python/Plugins/Extensions/Infopanel

SUBDIRS = icons meta

install_PYTHON = \
       __init__.py \
	CamCheck.py \
	CamStart.py \
	CronManager.py \
	MountManager.py \
	plugin.py \
	QuickMenu.py \
	RestartNetwork.py \
	ScriptRunner.py \
	SoftcamPanel.py \
	SoftwarePanel.py \
	SwapManager.py
